    - Hide screen of active variant from sidebar
    - When opening the active variant, open the gui of the normal one
    - Make active sidebar less weird by showing the sprite, no shadow tho
    - Begin conversion into struct
    - Always lookup struct via id (unit_number is ambiguous when things consist of multiple entities)
    - Remove green arrows from alchemical combinator icon sprites
    - Add recipe and add to technology
    - Handle combinator being rotated or flipped
    - Do not switch to active when something is being held
    - Connect the inputs of the normal & active combinators so the wires highlight
    - Support mining the combinator whilst active is active
    - Fix gui not opening anymore
    - Make the undo queue respect mining an active combinator
    - Grab the red and green signals for the hidden surface
    - Prepare the blacklist combinator and decider filter entities
    - Cleanup storage when their respective entities die
    - Move deselection cleanup to on_tick
    - Read new conditions into struct when closing gui
    - Populate the blacklist
    - Make the not yet seen logic prettier
    - Bring the decider combinator output side back to the surface
    - Comment wire connection blocks
    - Make the deciders for each of the conditions
    - Switch the condition combiners from decider to arithmetic
    - Reuse struct.arithmetics where possible
    - Refractor to support entity settings pasted
    - Support copying onto -active
    - Attempt to hijack the entity settings copy event
    - Keep active active whilst it is a copy source
    - Mildly optimize copy source check
    - Make blueprints functional
    - Bump alchemical combinator sprites (or is the atlas to blame?)
    - Use wichcraft to make it display output signals on hover
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2024. 11. 04
  Info:
    - Initial commit